adding new classes and updating others

--- a/app/src/main/res/layout/activity_add_language.xml
+++ b/app/src/main/res/layout/activity_add_language.xml
@@ -2,9 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
@@ -25,18 +26,17 @@
 
         <TextView
             android:id="@+id/tvHeaderTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Add Language"
+            android:text="Add / Change Languages"
             android:textColor="@color/primary_blue"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btnBack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
@@ -61,8 +61,14 @@
             android:layout_marginStart="16dp"
             android:text="Current Language: Java"
             android:textSize="18sp"/>
-
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLanguages"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingBottom="16dp"/>
 
     <Spinner
         android:id="@+id/languageSpinner"
@@ -71,10 +77,8 @@
 
     <Button
         android:id="@+id/addLanguageButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ADD LANGUAGE"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"/>
-
+        android:text="Add Language"
+        android:layout_marginTop="16dp"/>
 </LinearLayout>
