--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -8,15 +8,12 @@
     android:padding="16dp"
     android:background="@color/background_light_blue">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/btn_back"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/back_icon"
-        android:background="@null"
-        android:contentDescription="Back Button"
-        android:layout_gravity="start"
-        app:tint="@color/primary_blue" />
+        android:layout_width="56dp"
+        android:layout_height="40dp"
+        android:contentDescription="@string/back"
+        android:src="@drawable/back" />
 
     <TextView
         android:layout_width="match_parent"
