--- a/app/src/main/res/layout/activity_generate_quiz.xml
+++ b/app/src/main/res/layout/activity_generate_quiz.xml
@@ -6,7 +6,7 @@
     android:id="@+id/layout_generate_quiz"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/text_grey"
     tools:context=".Admin.GenerateQuizActivity">
 
     <LinearLayout
@@ -56,7 +56,7 @@
         android:id="@+id/spinnerLanguage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         app:layout_constraintTop_toBottomOf="@id/labelLanguage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
         android:id="@+id/spinnerSkillLevel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         app:layout_constraintTop_toBottomOf="@id/labelSkill"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +108,7 @@
         android:id="@+id/spinnerChapter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:prompt="@string/select_chapter"
         app:layout_constraintTop_toBottomOf="@id/labelChapter"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +135,7 @@
         android:id="@+id/spinnerLesson"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:prompt="@string/select_lesson"
         app:layout_constraintTop_toBottomOf="@id/labelLesson"
         app:layout_constraintStart_toStartOf="parent"
