--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="primary_blue">#003366</color>
     <color name="secondary_blue">#b3d9ff</color>
+    <color name="text_grey">#f0f0f0</color>
     <color name="light_gray">#f0f0f0</color>
     <color name="background_light_blue">#e6f2ff</color>
     <color name="dark_gray">#666666</color>
