--- a/app/src/main/res/drawable/rounded_card.xml
+++ b/app/src/main/res/drawable/rounded_card.xml
@@ -8,7 +8,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/light_gray" />
+        android:color="@color/text_grey" />
 
 </shape>
 
