--- a/app/src/main/res/drawable/rounded_card_bg.xml
+++ b/app/src/main/res/drawable/rounded_card_bg.xml
@@ -6,7 +6,7 @@
     <corners android:radius="12dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/light_gray" />
+        android:color="@color/text_grey" />
     <padding
         android:left="8dp"
         android:top="6dp"
