--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/light_gray" />
+    <solid android:color="@color/text_grey" />
     <corners android:radius="25dp" />
     <stroke android:width="1dp" android:color="@color/secondary_blue" />
 </shape>
