--- a/app/src/main/res/layout/activity_code_quiz.xml
+++ b/app/src/main/res/layout/activity_code_quiz.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/light_gray">
+    android:background="@color/text_grey">
 
     <Button
         android:id="@+id/btnBack"
