--- a/app/src/main/res/layout/activity_generate_chapters.xml
+++ b/app/src/main/res/layout/activity_generate_chapters.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_generate_chapters"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/text_grey">
 
     <LinearLayout
         android:id="@+id/header"
@@ -41,7 +41,7 @@
         android:id="@+id/spinnerLanguage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:hint="Chapter Title"
         android:inputType="text"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/spinnerLanguage"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:hint="Chapter Number (1–5)"
         android:inputType="number"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/etChapterTitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:hint="Lesson Title"
         android:inputType="text"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/etChapterNumber"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:hint="Lesson Number (1–5)"
         android:inputType="number"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/etLessonTitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:hint="Lesson Description"
         android:inputType="textMultiLine"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/etLessonNumber"
         app:layout_constraintStart_toStartOf="parent"
