--- a/app/src/main/res/layout/activity_view_quiz_content.xml
+++ b/app/src/main/res/layout/activity_view_quiz_content.xml
@@ -6,7 +6,7 @@
     android:id="@+id/layout_view_quiz_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/text_grey"
     tools:context=".Admin.ViewQuizContentActivity">
 
     <LinearLayout
@@ -54,7 +54,7 @@
         android:id="@+id/spinnerLanguage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/labelLanguage"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:id="@+id/spinnerSkillLevel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/labelSkill"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:id="@+id/spinnerChapter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/labelChapter"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +114,7 @@
         android:id="@+id/spinnerLesson"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/labelLesson"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
         android:id="@+id/rvQuestions"
         android:layout_width="398dp"
         android:layout_height="188dp"
-        android:background="@color/light_gray"
+        android:background="@color/text_grey"
         android:padding="8dp"
         app:layout_constraintBottom_toTopOf="@+id/layoutEditSave"
         app:layout_constraintEnd_toEndOf="parent"
